--- a/css/flat.css
+++ b/css/flat.css
@@ -41,6 +41,8 @@ img {
 .slick-header {
   position: relative;
   height: 1000px; }
+  .slick-header img {
+    height: 100%; }
   .slick-header .slick-arrow {
     position: absolute;
     top: 48%;
@@ -107,7 +109,7 @@ img {
   background: url(../img/services.jpg) no-repeat;
   background-size: cover;
   padding-bottom: 120px;
-  padding-top: 147px; }
+  padding-top: 175px; }
   .services__active {
     background: #df5c64; }
   .services__content {
@@ -145,7 +147,7 @@ img {
       margin-bottom: 20px; } }
 
 .item-service__subtitle {
-  margin: 22px 0 42px 0; }
+  margin: 18px 0 42px 0; }
   @media screen and (max-width: 767px) {
     .item-service__subtitle {
       margin-bottom: 20px; } }
@@ -163,6 +165,18 @@ img {
 .about {
   background: #665464 url(/img/about/aboutbg.jpg) no-repeat;
   background-size: cover;
-  padding-top: 20px; }
+  padding-top: 187px;
+  height: 1000px; }
   .about__content {
     text-align: center; }
+  .about__text {
+    margin-top: 14px;
+    line-height: 24px; }
+  .about .about__btn {
+    font-size: 25px;
+    text-transform: uppercase;
+    font-weight: 900;
+    color: #fff;
+    background-color: #a1ca6c;
+    outline: none;
+    border: none; }
