--- a/scss/blocks/about.scss
+++ b/scss/blocks/about.scss
@@ -1,11 +1,27 @@
 .about {
     background: #665464 url(/img/about/aboutbg.jpg) no-repeat;
     background-size: cover;
-    padding-top: 20px;
+    padding-top: 187px;
+    height: 1000px;
     
 
     &__content {
         text-align: center;
         
+    }
+
+    &__text {
+        margin-top: 14px;
+        line-height: 24px;
+    }
+
+    .about__btn {
+        font-size: 25px;
+        text-transform: uppercase;
+        font-weight: 900;
+        color: #fff;
+        background-color: #a1ca6c;
+        outline: none;
+        border: none;
     }
 }
