--- a/scss/blocks/services.scss
+++ b/scss/blocks/services.scss
@@ -1,18 +1,10 @@
 .services {
-    background: url(../img/services.jpg) no-repeat;
+    background: #b24a50 url(/img/service/services.jpg) no-repeat;
     background-size: cover;
     padding-bottom: 120px;
     padding-top: 175px;
 
-    &__active {
-        background: $red;
-    }
-
     &__content {
-        text-align: center;
-        max-width: 1031px;
-        margin: 0 auto;
-
         span {
             color: #ec9da2;
         }
