--- a/scss/blocks/about.scss
+++ b/scss/blocks/about.scss
@@ -2,26 +2,102 @@
     background: #665464 url(/img/about/aboutbg.jpg) no-repeat;
     background-size: cover;
     padding-top: 187px;
-    height: 1000px;
+    padding-bottom: 114px;
     
-
-    &__content {
-        text-align: center;
-        
-    }
 
     &__text {
         margin-top: 14px;
         line-height: 24px;
     }
 
-    .about__btn {
+    &__btn {
+        background-color: $green;
+        width: 100%;
+        max-width: 276px;
+        padding: 6px 0;
+        border-radius: 5px;
+        margin-top: 56px;
+        position: relative;
+
+        &::before {
+            content: "";
+            position: absolute;
+            bottom: -7px;
+            left: 50%;
+            width: 15px;
+            height: 15px;
+            border-top: 1px solid $green;
+            border-left: 1px solid $green;
+            background-color: $green;
+            transform: rotate(-135deg);
+        }
+    }
+
+    &__info {
+        margin-top: 71px;
+    }
+
+    &__info-block {
+        text-align: center;
+        border-radius: 5px;
+        background-color: rgba(77, 63, 75, .5);
+        padding-top: 40px;
+        padding-bottom: 29px;
+        
+
+        &:hover {
+            .about__info-name {
+                color: #fff;
+            }
+            .about__info-job {
+                color: #ff8973;
+            }
+            .about__info-network--fac {
+                background-color: #4f689e;
+            }
+            .about__info-network--twit {
+                background-color: #74c7d5;
+            }
+            .about__info-network--goog {
+                background-color: #df5c64;
+            }
+            .about__info-network--link {
+                background-color: #3e61af;
+            }        
+        }
+    }
+
+    &__info-photo {
+        margin-bottom: 4px;
+    }
+
+    &__info-name {
         font-size: 25px;
-        text-transform: uppercase;
         font-weight: 900;
-        color: #fff;
-        background-color: #a1ca6c;
-        outline: none;
-        border: none;
+        color: #c7b6c5;
+        text-transform: uppercase;
+        margin-bottom: 6px;
+    }
+
+    &__info-job {
+        font-size: 14px;
+        color: $green;
+        margin-bottom: 38px;
+    }
+
+    &__info-social  {
+        display: flex;
+        justify-content: center;
+    }
+
+    &__info-network  {
+        margin: 0 10px;
+        background-color: #a1859e;
+        width: 30px;
+        height: 30px;
+        border-radius: 15px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 }
