--- a/scss/blocks/header.scss
+++ b/scss/blocks/header.scss
@@ -1,8 +1,7 @@
 .header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 1;
+    
+    background: url(/img/head.jpg) no-repeat;
+    background-size: cover;
+    height: 1000px;
     padding: 35px 0;
 }
