--- a/scss/flat.scss
+++ b/scss/flat.scss
@@ -5,10 +5,10 @@ body {
 }
 
 $blue: #74c7d5;
-$red: #df5c64;
+$green: #a1ca6c;
 
 a {
-    display: block;
+    display: inline-block;
     text-decoration: none;
     color: #fff;
 }
@@ -42,6 +42,20 @@ img {
     display: block !important;
 }
 
+.content {
+    text-align: center;
+    max-width: 1050px;
+}
+
+.btn {
+    font-size: 25px;
+    text-transform: uppercase;
+    font-weight: 900;
+    color: #fff;
+    outline: none;
+    border: none;
+}
+
 
 
 
@@ -54,6 +68,8 @@ img {
 @import 'blocks/services';
 @import 'blocks/item-service';
 @import 'blocks/about';
-@import 'blocks/about-profiles';
+@import 'blocks/work';
+@import 'blocks/contact';
+
 
 
