--- a/css/flat.css
+++ b/css/flat.css
@@ -5,7 +5,7 @@ body {
   height: 10vh; }
 
 a {
-  display: inline-block;
+  display: block;
   text-decoration: none;
   color: #fff; }
 
@@ -48,10 +48,71 @@ img {
   padding-bottom: 100px; }
 
 .header {
-  background: url(/img/head.jpg) no-repeat;
-  background-size: cover;
-  height: 1000px;
-  padding: 35px 0; }
+  padding-top: 43px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  width: 100%; }
+  .header__wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    position: relative; }
+
+@media screen and (max-width: 991px) {
+  .header__burger {
+    display: block;
+    position: relative;
+    width: 30px;
+    height: 20px;
+    right: 0;
+    z-index: 2; }
+    .header__burger:before, .header__burger:after {
+      content: "";
+      background-color: #fff;
+      position: absolute;
+      width: 100%;
+      height: 2px;
+      left: 0;
+      -webkit-transition: all 0.3s ease 0s;
+      -o-transition: all 0.3s ease 0s;
+      transition: all 0.3s ease 0s; }
+    .header__burger:before {
+      top: 0; }
+    .header__burger:after {
+      bottom: 0; }
+    .header__burger span {
+      position: absolute;
+      left: 0;
+      top: 9px;
+      display: block;
+      width: 100%;
+      height: 2px;
+      background: #fff; }
+    .header__burger.active:before {
+      -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+      transform: rotate(45deg);
+      top: 9px; }
+    .header__burger.active:after {
+      -webkit-transform: rotate(-45deg);
+      -ms-transform: rotate(-45deg);
+      transform: rotate(-45deg);
+      bottom: 9px; }
+    .header__burger.active span {
+      -webkit-transform: scale(0);
+      -ms-transform: scale(0);
+      transform: scale(0); }
+  .header__logo {
+    position: relative;
+    z-index: 2; } }
 
 .slick-header {
   position: relative;
@@ -115,10 +176,49 @@ img {
     text-transform: uppercase;
     font-weight: 900; }
 
-.nav__link {
-  font-size: 18px;
-  margin: 0 20px;
-  position: relative; }
+.nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+  .nav__link {
+    color: #fff;
+    margin: 0 30px; }
+    .nav__link:first-child {
+      margin-left: 0; }
+  .nav__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
+
+@media screen and (max-width: 991px) {
+  .nav {
+    position: fixed;
+    top: -100%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: block;
+    -webkit-transition: all 0.3s ease 0s;
+    -o-transition: all 0.3s ease 0s;
+    transition: all 0.3s ease 0s;
+    background-color: #965555;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    text-align: center; }
+    .nav.active {
+      top: 0; }
+    .nav__link {
+      margin: 0 0 30px 0;
+      font-size: 20px; }
+    .nav__list {
+      display: block; } }
 
 .services {
   background: #b24a50 url(/img/service/services.jpg) no-repeat;
@@ -381,9 +481,6 @@ img {
     .contact__info-question {
       font-size: 30px;
       font-weight: 300; }
-    @media screen and (max-width: 767px) {
-      .contact__info-map {
-        margin-top: 20px; } }
     .contact__info-form {
       margin-top: 16px; }
     .contact__info-input, .contact__info-area {
@@ -428,3 +525,25 @@ img {
       color: #82c8bd;
       font-family: "Lato";
       font-weight: 400; }
+
+.footer {
+  background-color: #68a097;
+  background-size: cover;
+  padding: 30px 0; }
+  .footer__content-social {
+    margin: 0 20px;
+    margin: 0 10px;
+    background-color: #a1859e;
+    width: 30px;
+    height: 30px;
+    border-radius: 15px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    background-color: #82c8bd; }
