--- a/scss/blocks/nav.scss
+++ b/scss/blocks/nav.scss
@@ -1,13 +1,49 @@
 .nav {
-    
-    &__link {
-        font-size: 18px;
-        margin: 0 20px;
-        position: relative;
+    display: flex;
 
+    &__link {
+        color: #fff;
+        margin: 0 30px;
         
+        &:first-child {
+           margin-left: 0;
+        }
     }
 
+    &__list {
+        display: flex;
+    }
 }
 
+@media screen and(max-width:991px) {
+    .nav {
+        position: fixed;
+        top: -100%;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        display: block;
+        transition: all 0.3s ease 0s;
+        background-color: #965555;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        
+   
+    
+        &.active {
+            top: 0;
+        }
+
+        &__link {
+            margin: 0 0 30px 0;
+            font-size: 20px;
+        } 
+
+        &__list {
+            display: block;
+        }
+    }
+}
 
