--- a/css/flat.css
+++ b/css/flat.css
@@ -48,12 +48,13 @@ img {
   padding-bottom: 100px; }
 
 .header {
-  padding-top: 43px;
+  padding: 30px 0;
   position: fixed;
   top: 0;
   left: 0;
   z-index: 2;
-  width: 100%; }
+  width: 100%;
+  background-color: rgba(191, 230, 236, 0.7); }
   .header__wrapper {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -547,3 +548,56 @@ img {
     -ms-flex-align: center;
     align-items: center;
     background-color: #82c8bd; }
+
+.intro {
+  position: relative; }
+  .intro__content {
+    text-align: center;
+    color: #74c7d5;
+    text-transform: uppercase;
+    z-index: 2; }
+  .intro__simple {
+    font-size: 80px;
+    font-family: "Gotham";
+    letter-spacing: 3px; }
+    @media screen and (max-width: 575px) {
+      .intro__simple {
+        font-size: 60px; } }
+  .intro__world {
+    font-size: 18px;
+    font-family: "GothamBook";
+    margin-top: 21px;
+    letter-spacing: 5px; }
+
+.slick-top__item {
+  background: url(/img/head.jpg);
+  background-size: cover;
+  padding-top: 342px;
+  padding-bottom: 316px; }
+
+.slick-top .slick-dots {
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  right: 27px; }
+  @media screen and (max-width: 575px) {
+    .slick-top .slick-dots {
+      right: 10px; } }
+
+.slick-top .slick-dots li {
+  list-style-type: none;
+  margin: 20px 0;
+  padding: 0; }
+
+.slick-top .slick-dots button {
+  font-size: 0;
+  height: 13px;
+  outline: none;
+  border: 1px solid #fff;
+  border-radius: 50%;
+  background: transparent; }
+
+.slick-top .slick-dots li.slick-active button {
+  background: #fff; }
