--- a/scss/blocks/header.scss
+++ b/scss/blocks/header.scss
@@ -1,10 +1,11 @@
 .header {
-    padding-top: 43px;
+    padding: 30px 0;
     position: fixed;
     top: 0;
     left: 0;
     z-index: 2;
     width: 100%;
+    background-color: rgba(191, 230, 236, 0.7);
     
       
     &__wrapper {
