--- a/scss/blocks/nav.scss
+++ b/scss/blocks/nav.scss
@@ -24,7 +24,7 @@
         height: 100%;
         display: block;
         transition: all 0.3s ease 0s;
-        background-color: #965555;
+        background-color: rgb(15, 14, 14);
         display: flex;
         justify-content: center;
         align-items: center;
