--- a/scss/blocks/about.scss
+++ b/scss/blocks/about.scss
@@ -44,6 +44,10 @@
             background-color: $green;
             transform: rotate(-135deg);
         }
+
+        &:hover {
+            background-color: darken($green, 10%);
+        }
     }
 
     &__info {
