--- a/scss/blocks/contact.scss
+++ b/scss/blocks/contact.scss
@@ -111,6 +111,10 @@
             border: 0;
             outline: 0;
             margin-top: 25px;
+
+            &:hover {
+                background-color: darken(#df5c64, 10%);
+            }
         }
 
         ::-webkit-input-placeholder {
@@ -136,14 +140,7 @@
             color: #82c8bd;
             font-family: "Lato";
             font-weight: 400;  
-        }
-
-        
-            
-         
-        
- 
-
+        }         
     }
 
 }
