--- a/scss/blocks/intro.scss
+++ b/scss/blocks/intro.scss
@@ -30,7 +30,7 @@
 .slick-top {
     
     &__item {
-        background: url(/img/head.jpg);
+        background: url(img/head.jpg);
         background-size: cover;
         padding-top: 342px; 
         padding-bottom: 316px;
