--- a/scss/blocks/about.scss
+++ b/scss/blocks/about.scss
@@ -1,5 +1,5 @@
 .about {
-    background: #665464 url(img/about/aboutbg.jpg) no-repeat;
+    background: #665464 url(/img/about/aboutbg.jpg);
     background-size: cover;
     padding-top: 187px;
     padding-bottom: 115px;
