--- a/scss/flat.scss
+++ b/scss/flat.scss
@@ -67,7 +67,7 @@ img {
 
 
 @import 'blocks/header';
-@import 'blocks/slick-header';
+@import 'blocks/slick-top';
 @import 'blocks/home';
 @import 'blocks/nav';
 @import 'blocks/services';
