--- a/scss/blocks/slick-top.scss
+++ b/scss/blocks/slick-top.scss
@@ -1,10 +1,15 @@
 .slick-top {
     
     &__item {
-        background: url(img/head.jpg);
+        background: url(/img/head.jpg);
         background-size: cover;
         padding-top: 342px; 
         padding-bottom: 316px;
+    }
+
+
+    &.slick-vertical .slick-slide {
+        border: none;
     }
 
     & .slick-dots {
