--- a/scss/blocks/intro.scss
+++ b/scss/blocks/intro.scss
@@ -1,7 +1,15 @@
 .intro {
-
     position: relative;
 
+
+    &__photo {
+
+        
+        img {
+            width: 100%;
+            height: 100vh;
+        }
+    }
    
 
     &__content {
@@ -10,8 +18,8 @@
         text-transform: uppercase;
         position: absolute;
         top: 50%;
-        transform: translateY(-50%);
-        left: 20%;
+        transform: translate(-50%,-50%);
+        left: 50%;
         z-index: 20;
     }
 
