--- a/css/flat.css
+++ b/css/flat.css
@@ -293,16 +293,16 @@ img {
     .about__btn::before {
       content: "";
       position: absolute;
-      bottom: -7px;
+      bottom: -15px;
       left: 50%;
-      width: 15px;
-      height: 15px;
-      border-top: 1px solid #a1ca6c;
-      border-left: 1px solid #a1ca6c;
-      background-color: #a1ca6c;
-      -webkit-transform: rotate(-135deg);
-      -ms-transform: rotate(-135deg);
-      transform: rotate(-135deg); }
+      -webkit-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+      transform: translateX(-50%);
+      width: 0;
+      height: 0;
+      border-left: 15px solid transparent;
+      border-right: 15px solid transparent;
+      border-top: 15px solid #a1ca6c; }
     .about__btn:hover {
       background-color: #89bc47; }
   .about__info {
