--- a/scss/blocks/about.scss
+++ b/scss/blocks/about.scss
@@ -35,14 +35,14 @@
         &::before {
             content: "";
             position: absolute;
-            bottom: -7px;
+            bottom: -15px;
             left: 50%;
-            width: 15px;
-            height: 15px;
-            border-top: 1px solid $green;
-            border-left: 1px solid $green;
-            background-color: $green;
-            transform: rotate(-135deg);
+            transform: translateX(-50%);
+            width: 0; 
+            height: 0; 
+            border-left: 15px solid transparent;
+            border-right: 15px solid transparent;
+            border-top: 15px solid #a1ca6c;
         }
 
         &:hover {
