--- a/scss/blocks/services.scss
+++ b/scss/blocks/services.scss
@@ -1,5 +1,5 @@
 .services {
-    background: #b24a50 url(img/service/services.jpg) no-repeat;
+    background: #b24a50 url(/img/service/services.jpg) no-repeat;
     background-size: cover;
     padding-top: 175px;
     padding-bottom: 122px;
