--- a/css/flat.css
+++ b/css/flat.css
@@ -210,7 +210,8 @@ img {
       display: block; } }
 
 .services {
-  background: #b24a50 url(/img/service/services.jpg) no-repeat;
+  background: url(/img/services.jpg) no-repeat;
+  background-color: #9e7b7d;
   background-size: cover;
   padding-top: 175px;
   padding-bottom: 122px; }
