--- a/css/flat.css
+++ b/css/flat.css
@@ -210,8 +210,7 @@ img {
       display: block; } }
 
 .services {
-  background-color: #9e7b7d;
-  background: url(/img/services.jpg) no-repeat;
+  background: #9e7b7d url(../../img/services.jpg) no-repeat;
   background-size: cover;
   padding-top: 175px;
   padding-bottom: 122px; }
