--- a/scss/blocks/services.scss
+++ b/scss/blocks/services.scss
@@ -1,6 +1,5 @@
 .services {
-    background-color: #9e7b7d;
-    background: url(/img/services.jpg) no-repeat;
+    background: #9e7b7d url(../../img/services.jpg) no-repeat;
     background-size: cover;
     padding-top: 175px;
     padding-bottom: 122px;
