--- a/css/flat.css
+++ b/css/flat.css
@@ -54,7 +54,7 @@ img {
   left: 0;
   z-index: 2;
   width: 100%;
-  background-color: rgba(27, 23, 23, 0.7); }
+  background-color: rgba(14, 61, 100, 0.7); }
   .header__wrapper {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -186,7 +186,6 @@ img {
     left: 0;
     width: 100%;
     height: 100%;
-    display: block;
     -webkit-transition: all 0.3s ease 0s;
     -o-transition: all 0.3s ease 0s;
     transition: all 0.3s ease 0s;
@@ -194,20 +193,21 @@ img {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
     -webkit-box-pack: center;
     -ms-flex-pack: center;
     justify-content: center;
     -webkit-box-align: center;
     -ms-flex-align: center;
-    align-items: center;
-    text-align: center; }
+    align-items: center; }
     .nav.active {
       top: 0; }
     .nav__link {
       margin: 0 0 30px 0;
-      font-size: 20px; }
-    .nav__list {
-      display: block; } }
+      font-size: 20px; } }
 
 .services {
   background: #B34950 url(../img/services.jpg) no-repeat;
