--- a/scss/blocks/nav.scss
+++ b/scss/blocks/nav.scss
@@ -18,16 +18,14 @@
         left: 0;
         width: 100%;
         height: 100%;
-        display: block;
         transition: all 0.3s ease 0s;
         background-color: rgb(15, 14, 14);
         display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
-        text-align: center;
+      
         
-   
-    
         &.active {
             top: 0;
         }
@@ -37,9 +35,6 @@
             font-size: 20px;
         } 
 
-        &__list {
-            display: block;
-        }
     }
 }
 
