--- a/css/flat.css
+++ b/css/flat.css
@@ -189,7 +189,7 @@ img {
     -webkit-transition: all 0.3s ease 0s;
     -o-transition: all 0.3s ease 0s;
     transition: all 0.3s ease 0s;
-    background-color: #0f0e0e;
+    background-color: rgba(14, 61, 100, 0.7);
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
