--- a/scss/blocks/nav.scss
+++ b/scss/blocks/nav.scss
@@ -19,7 +19,7 @@
         width: 100%;
         height: 100%;
         transition: all 0.3s ease 0s;
-        background-color: rgb(15, 14, 14);
+        background-color: rgba(14, 61, 100, 0.7);
         display: flex;
         flex-direction: column;
         justify-content: center;
