--- a/scss/blocks/services.scss
+++ b/scss/blocks/services.scss
@@ -1,5 +1,5 @@
 .services {
-    background: #B34950 url(../img/services.jpg) no-repeat;
+    background: #B34950 url(../img/service/services.jpg) no-repeat;
     background-size: cover;
     padding-top: 175px;
     padding-bottom: 122px;
