--- a/css/flat.css
+++ b/css/flat.css
@@ -210,7 +210,7 @@ img {
       font-size: 20px; } }
 
 .services {
-  background: #B34950 url(../img/services.jpg) no-repeat;
+  background: #B34950 url(../img/service/servicebg.jpg) no-repeat;
   background-size: cover;
   padding-top: 175px;
   padding-bottom: 122px; }
